tests/errors/syn_for7.java
public class syn_for7{
public static void main(String[] args){
 for ( ; ; ) {
}
}